--- a/DeliveryOriginal/DeliveryOriginal.Mobile/settings.gradle
+++ b/DeliveryOriginal/DeliveryOriginal.Mobile/settings.gradle
@@ -6,5 +6,5 @@ dependencyResolutionManagement {
         jcenter() // Warning: this repository is going to shut down soon
     }
 }
-rootProject.name = "DeliveryOriginal.Mobile"
+rootProject.name = "DeliveryOriginal"
 include ':app'
