Complete basic authorization logic

--- a/DeliveryOriginal/DeliveryOriginal.Admin/Web.config
+++ b/DeliveryOriginal/DeliveryOriginal.Admin/Web.config
@@ -22,7 +22,7 @@
 		<providers>
 			<clear/>
 			<add name="CustomMembership"
-				type="CustomAuthenticationMVC.CustomAuthentication.CustomMembership"/>
+				type="DeliveryOriginal.Admin.Identity.CustomMembership"/>
 		</providers>
 	</membership>
   </system.web>
