Add password encryption and category section

--- a/DeliveryOriginal/DeliveryOriginal.Admin/Web.config
+++ b/DeliveryOriginal/DeliveryOriginal.Admin/Web.config
@@ -14,6 +14,10 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
 	<add key="ApiUrl" value="https://delivery-original-api.herokuapp.com/" />
+	<add key="DishImageWidth" value="200" />
+	<add key="DishImageHeight" value="200" />
+	<add key="CategoryImageWidth" value="200" />
+	<add key="CategoryImageHeight" value="200" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
