--- a/DeliveryOriginal/DeliveryOriginal.Admin/DeliveryOriginal.Admin.csproj
+++ b/DeliveryOriginal/DeliveryOriginal.Admin/DeliveryOriginal.Admin.csproj
@@ -245,9 +245,13 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\AnalyticsController.cs" />
+    <Compile Include="Controllers\CategoryController.cs" />
     <Compile Include="Controllers\DishController.cs" />
     <Compile Include="Controllers\OrderController.cs" />
     <Compile Include="Controllers\UserController.cs" />
+    <Compile Include="Core\Helpers\CryptographyHelper.cs" />
+    <Compile Include="Core\Helpers\ImageResizer.cs" />
+    <Compile Include="Core\Helpers\MediaStorageHelper.cs" />
     <Compile Include="DeliveryOriginalSettings.cs" />
     <Compile Include="Core\Extensions\EnumExtensions.cs" />
     <Compile Include="Global.asax.cs">
@@ -259,6 +263,7 @@
     <Compile Include="Core\Identity\CustomPrincipal.cs" />
     <Compile Include="Core\Interfaces\IRepository.cs" />
     <Compile Include="Core\Interfaces\IUnitOfWork.cs" />
+    <Compile Include="Models\Category.cs" />
     <Compile Include="Models\Dish.cs" />
     <Compile Include="Models\Enums.cs" />
     <Compile Include="Models\LoginViewModel.cs" />
@@ -268,7 +273,7 @@
     <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Core\Repositories\DishRepository.cs" />
-    <Compile Include="Core\Repositories\OrderedDishRepository.cs" />
+    <Compile Include="Core\Repositories\CategoryRepository.cs" />
     <Compile Include="Core\Repositories\OrderRepository.cs" />
     <Compile Include="Core\Repositories\UserRepository.cs" />
     <Compile Include="UnitOfWork.cs" />
@@ -316,6 +321,13 @@
     <Content Include="Views\Order\_OrderDetails.cshtml" />
     <Content Include="Views\Order\_OrderListItem.cshtml" />
     <Content Include="Views\Dish\Index.cshtml" />
+    <Content Include="Views\User\EditUser.cshtml" />
+    <Content Include="Views\Dish\EditDish.cshtml" />
+    <Content Include="Views\Dish\CreateDish.cshtml" />
+    <Content Include="Views\User\CreateUser.cshtml" />
+    <Content Include="Views\Category\CreateCategory.cshtml" />
+    <Content Include="Views\Category\EditCategory.cshtml" />
+    <Content Include="Views\Category\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
