--- a/DeliveryOriginal/DeliveryOriginal.Admin/DeliveryOriginal.Admin.csproj
+++ b/DeliveryOriginal/DeliveryOriginal.Admin/DeliveryOriginal.Admin.csproj
@@ -283,6 +283,9 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\images\sort_asc.png" />
+    <Content Include="Content\images\sort_both.png" />
+    <Content Include="Content\images\sort_desc.png" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
