--- a/DeliveryOriginal/DeliveryOriginal.Mobile/app/src/main/AndroidManifest.xml
+++ b/DeliveryOriginal/DeliveryOriginal.Mobile/app/src/main/AndroidManifest.xml
@@ -2,24 +2,49 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.Delivery_Project">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.DeliveryOriginal">
+        android:theme="@style/Theme.DeliveryOriginal"
+        android:usesCleartextTraffic="true">
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.ui.activity.DishDescriptionActivity"
+            android:exported="true"
+            />
+        <activity
+            android:name=".ui.ui.activity.DishesActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.ui.activity.RegistrationActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.ui.activity.LoginActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.ui.activity.WelcomeActivity"
+            android:exported="true">
+
+        </activity>
+        <activity
+            android:name=".ui.ui.activity.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.DeliveryOriginal.NoActionBar">
+            android:theme="@style/Theme.DeliveryOriginal.NoActionBar"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
