--- a/DeliveryOriginal/DeliveryOriginal.Mobile/app/src/main/AndroidManifest.xml
+++ b/DeliveryOriginal/DeliveryOriginal.Mobile/app/src/main/AndroidManifest.xml
@@ -24,23 +24,28 @@
             android:exported="false" />
         <activity
             android:name=".ui.ui.activity.LoginActivity"
-            android:exported="false" />
+            android:exported="true" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".ui.ui.activity.WelcomeActivity"
             android:exported="true">
 
         </activity>
         <activity
+            android:name=".ui.ui.activity.CheckoutActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.ui.activity.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.DeliveryOriginal.NoActionBar"
             >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <meta-data
             android:name="preloaded_fonts"
