--- a/DeliveryOriginal/DeliveryOriginal.Mobile/app/build.gradle
+++ b/DeliveryOriginal/DeliveryOriginal.Mobile/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin'
 }
 
 android {
@@ -35,7 +36,14 @@ android {
 }
 
 dependencies {
+    implementation 'org.jetbrains.anko:anko-commons:0.10.2'
+    implementation 'com.beust:klaxon:0.30'
+    implementation 'com.google.maps.android:android-maps-utils:0.4+'
+
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.google.firebase:firebase-firestore-ktx:23.0.2'
+    implementation 'com.google.android.gms:play-services-location:18.0.0'
+    implementation 'com.google.android.gms:play-services-maps:18.0.2'
     def lifecycle_version = "2.2.0"
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
