--- a/DeliveryOriginal/DeliveryOriginal.Mobile/app/src/main/AndroidManifest.xml
+++ b/DeliveryOriginal/DeliveryOriginal.Mobile/app/src/main/AndroidManifest.xml
@@ -4,6 +4,9 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
 
     <application
         android:allowBackup="true"
@@ -13,16 +16,31 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.DeliveryOriginal"
         android:usesCleartextTraffic="true">
-        <activity android:name=".ui.ui.activity.CookOrderDescription"
-            android:exported="true"
-            />
-        <activity android:name=".ui.ui.activity.CookActivity"
-            android:exported="true"
-            />
+
+        <!--
+             TODO: Before you run your application, you need a Google Maps API key.
+
+             To get one, follow the directions here:
+
+                https://developers.google.com/maps/documentation/android-sdk/get-api-key
+
+             Once you have your API key (it starts with "AIza"), define a new property in your
+             project's local.properties file (e.g. MAPS_API_KEY=Aiza...), and replace the
+             "YOUR_API_KEY" string in this file with "${MAPS_API_KEY}".
+        -->
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyBBHrjCIfyjbSXNpMlahZR9MYus_EPD3tc" />
+
+        <activity
+            android:name=".ui.ui.activity.CookOrderDescription"
+            android:exported="true" />
+        <activity
+            android:name=".ui.ui.activity.CookActivity"
+            android:exported="true" />
         <activity
             android:name=".ui.ui.activity.DishDescriptionActivity"
-            android:exported="true"
-            />
+            android:exported="true" />
         <activity
             android:name=".ui.ui.activity.DishesActivity"
             android:exported="false" />
@@ -31,7 +49,7 @@
             android:exported="false" />
         <activity
             android:name=".ui.ui.activity.LoginActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -40,14 +58,10 @@
         </activity>
         <activity
             android:name=".ui.ui.activity.WelcomeActivity"
-            android:exported="true">
-
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".ui.ui.activity.DeliveryActivity"
-            android:exported="true">
-
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".ui.ui.activity.CheckoutActivity"
             android:exported="false" />
@@ -55,13 +69,11 @@
             android:name=".ui.ui.activity.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.DeliveryOriginal.NoActionBar"
-            >
+            android:theme="@style/Theme.DeliveryOriginal.NoActionBar"></activity>
 
-        </activity>
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
     </application>
-
+    <uses-feature android:glEsVersion="0x00020000" android:required="true"/>
 </manifest>
