--- a/DeliveryOriginal/DeliveryOriginal.Admin/Web.config
+++ b/DeliveryOriginal/DeliveryOriginal.Admin/Web.config
@@ -21,13 +21,16 @@
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
-    <httpRuntime targetFramework="4.7.2" />
+    <httpRuntime targetFramework="4.7.2" maxRequestLength="104857"
+			enableVersionHeader="false" useFullyQualifiedRedirectUrl="false"
+			requestLengthDiskThreshold="80192" requestValidationType ="DeliveryOriginal.Admin.Core.Validators.CustomRequestValidator" />
+	<httpCookies httpOnlyCookies="true" requireSSL="true" />
 	<membership defaultProvider="CustomMembership">
-		<providers>
-			<clear/>
-			<add name="CustomMembership"
-				type="DeliveryOriginal.Admin.Core.Identity.CustomMembership"/>
-		</providers>
+	  <providers>
+		<clear/>
+		<add name="CustomMembership"
+			type="DeliveryOriginal.Admin.Core.Identity.CustomMembership"/>
+	  </providers>
 	</membership>
   </system.web>
   <runtime>
